# SMDT

./: .env  .env.example  .env.test  .env.test.example  .gitignore  .pre-commit-config.yaml  README.md  SECURITY.md  package-lock.json  package.json  prompt.yml  pydoc-markdown.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml  security.yml  tests.yml
benchmark_scripts/: config.py  plot_summary.py  prepare_slices.py  pseudonymizer_benchmark.py  query_benchmark.py  run_ingestion_benchmark.py
benchmark_scripts/analyses/: report.ipynb
benchmark_scripts/logs/: db_initialized_parallel8.marker  db_initialized_single.marker  memory_samples_parallel8.jsonl  memory_samples_single.jsonl  pipeline_checkpoint_parallel8.txt  pseudonymizer_benchmark_parallel8.jsonl  pseudonymizer_benchmark_single.jsonl  query_benchmark_single.jsonl  results_parallel8.jsonl  results_single.jsonl
benchmark_scripts/logs/archive_pre_memfix/: memory_samples_single.jsonl  pipeline_checkpoint_single.txt
case_studies/: README.md
case_studies/1.RussiaUkraineWar/: 0.bootstrap.py  1.stance_vllm.py  2.result_russia_war.ipynb
case_studies/2.TemporalSentiment/: 0.run_sentiment.py  1.temporal_sent.ipynb
case_studies/3.HashtagDomain/: 0.enrich_detoxify.py  1.hashtag_domain.ipynb
case_studies/4.TemporalHashtag/: 0.build_temporal_hashtag_co.py  1.temporal_networks.ipynb
enricher_run_scripts/: genai_claude_test.py  genai_gemini_test.py  genai_openai_test.py  run_botmodel.py  run_sentiment_usc.py
scripts/: split-api.mjs
site/: about.md  index.md  package-lock.json
site/.vitepress/: config.mts
site/.vitepress/theme/: index.ts  style.css
site/examples/: getting-started.md  index.md
site/installation/: index.md
site/public/: llms-full.txt  llms.txt  robots.txt
site/recipes/: building-custom-standardizer.md  getting-started.md  index.md  pseudonymization.md  standardizing-twitter-v2.md  temporal-networks.md  using-pipelines.md
site/recipes/analysis/: inspector.md  multistore.md
site/recipes/enrichment/: building-custom-enricher.md  nlp.md
site/recipes/networks/: construction.md  temporal.md
src/smdt/: __init__.py  config.py
src/smdt/anonymizer/: __init__.py  anonymizer.py  policy.py  pseudonyms.py  readme.md  redact.py
src/smdt/enrichers/: __init__.py  base.py  bot_detection.py  embeddings.md  embeddings.py  language_detection.py  llm_textgen.md  llm_textgen.py  prompt_template.py  registry.py  runner.py  sentence_classifier.md  sentence_classifier.py  text_generation.md  text_generation.py  toxicity.md  toxicity.py
src/smdt/enrichers/account/: __init__.py
src/smdt/enrichers/nlp/: __init__.py
src/smdt/enrichers/prompt_adapters/: __init__.py  hf_text_adapter.py
src/smdt/enrichers/server/: prompt_template.py
src/smdt/ingest/: dedup.py  pipeline.py  plan.py
src/smdt/inspector/: __init__.py  inspector.md  inspector.py
src/smdt/io/: __init__.py  archive_stream.py
src/smdt/io/readers/: __init__.py  base.py  csv_pd.py  json.py  jsonl.py  parquet.py  registry.py  tar.py  utils.py  zip.py
src/smdt/multistore/: __init__.py  multistore.py
src/smdt/networks/: __init__.py  api.py  base.py  converters.py  io_utils.py  readme.md  specs.py  streams.py  types.py
src/smdt/networks/builders/: __init__.py  bipartite.py  coaction.py  entity_cooccurrence.py  user_interaction.py
src/smdt/pseudonymizer/: __init__.py  erasure.py  pii_engine.py  pii_policy.py  platform_patterns.py  policy.py  pseudonymizer.py  pseudonyms.py  readme.md  redact.py
src/smdt/standardizers/: __init__.py  base.py  row.py  utils.py
src/smdt/standardizers/bluesky/: bluesky_api.md  bluesky_api.py  bluesky_api_with_car.md  bluesky_api_with_car.py  bluesky_dataset.md  bluesky_dataset.py  bluesky_efe.py
src/smdt/standardizers/gab/: gab.py
src/smdt/standardizers/koo/: koo.py
src/smdt/standardizers/parler/: parler.py
src/smdt/standardizers/reddit/: reddit.py
src/smdt/standardizers/scored/: scored.py
src/smdt/standardizers/telegram/: telegram.py
src/smdt/standardizers/truthsocial/: truthsocial.md  truthsocial.py  truthsocial_USC.py
src/smdt/standardizers/twitter/: twitter_USC.py  twitter_finland.py  twitter_io.py  twitter_v1.md  twitter_v1.py  twitter_v2.md  twitter_v2.py
src/smdt/standardizers/voatco/: voatco.py
src/smdt/standardizers/weibo/: weibo.py  weibo_misbot.py
src/smdt/store/: __init__.py  schema_config.py  standard_db.py
src/smdt/store/models/: __init__.py  account_enrichments.py  accounts.py  actions.py  communities.py  dataset_meta.py  entities.py  hashmap.py  post_enrichments.py  posts.py
src/smdt/store/schemas/: anon_std_schema.sql  pseudo_std_schema.sql  standard_schema.sql
src/smdt/store/utils/: db_sanitize.py  geo.py
tests/: conftest.py  test_accounts.py  test_actions.py  test_enrichments.py  test_entities.py  test_hashmap.py  test_posts.py
tests/integration/: __init__.py  conftest.py  test_accounts.py  test_actions.py  test_enrichments.py  test_entities.py  test_erasure.py  test_hashmap.py  test_inspector.py  test_multistore.py  test_pipeline_parallel.py  test_posts.py  test_pseudonymizer_parallel.py  test_schema_config.py  test_standard_db_bulk_copy_insert.py
tests/networks/builders/: conftest.py
tests/standardizers/: test_base.py
tests/standardizers/bluesky/: test_bluesky_api_with_car.py
tests/standardizers/truthsocial/: test_truthsocial.py  test_truthsocial_USC.py
tests/unit/: __init__.py
tests/unit/enrichers/: test_base.py  test_bot_detection.py  test_embeddings.py  test_language_detection.py  test_llm_textgen.py  test_registry.py  test_runner.py  test_sentence_classifier.py  test_text_generation.py  test_toxicity.py
tests/unit/ingest/: test_pipeline_num_workers.py  test_pipeline_standardize_none.py
tests/unit/pseudonymizer/: test_erasure.py  test_pii_engine.py  test_pii_policy.py  test_platform_patterns.py  test_pseudonymizer_num_workers.py  test_pseudonyms.py
tests/unit/standardizers/: test_row.py  test_utils.py
tests/unit/store/: test_config.py  test_entities.py  test_geo.py  test_schema_config.py
(+57 files in other folders)
