[project]
name = "smdt"
version = "0.1.0"
description = "Social Media Data Toolkit - A lightweight toolkit for ingesting, normalizing, enriching, and analyzing social-media data"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "SMDT Contributors" }
]
keywords = ["social-media", "data-analysis", "network-analysis", "twitter", "bluesky"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "atproto>=0.0.63",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "igraph>=1.0.0",
    "ijson>=3.4.0.post0",
    "json-repair>=0.52.1",
    "matplotlib>=3.10.8",
    "networkx>=3.5",
    "openai>=2.6.0",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "psycopg[binary]>=3.2.10",
    "pyarrow>=22.0.0",
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "urlextract>=1.9.0",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


[project.entry-points."smdt.readers"]
json = "smdt.io.readers.json:JsonReader"
jsonl = "smdt.io.readers.jsonl:JsonlReader"
csv_pd = "smdt.io.readers.csv_pd:PandasCsvReader"
parquet = "smdt.io.readers.parquet:ParquetReader"
zip = "smdt.io.readers.zip:ZipReader"
tar = "smdt.io.readers.tar:TarReader"


[project.optional-dependencies]
# Development tools
dev = [
    "black[jupyter]>=25.9.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
]

# Enrichers
enrichers = []
langdetect = ["langdetect>=1.0.9"]
textgen = ["openai>=2.6.0"]
detoxify_toxicity = ["torch", "transformers"]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-m", "not integration",
]
markers = [
    "integration: marks tests as integration tests (require database)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src/smdt"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
precision = 2
show_missing = true

# Black formatter configuration
[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | build
  | dist
)/
'''

# Ruff linter configuration
[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
]

[tool.ruff.lint.isort]
known-first-party = ["smdt"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"tests/*" = ["B", "SIM"]  # ignore some checks in tests

# MyPy type checking configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # gradually enable
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_optional = true

[[tool.mypy.overrides]]
module = [
    "atproto.*",
    "duckdb.*",
    "igraph.*",
    "ijson.*",
    "orjson.*",
    "selenium.*",
    "transformers.*",
    "torch.*",
    "langdetect.*",
]
ignore_missing_imports = true
