[project]
name = "smdt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "atproto>=0.0.63",
    "black[jupyter]>=25.9.0",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "igraph>=1.0.0",
    "ijson>=3.4.0.post0",
    "json-repair>=0.52.1",
    "matplotlib>=3.10.8",
    "natsort>=8.4.0",
    "networkx>=3.5",
    "openai>=2.6.0",
    "orjson>=3.11.3",
    "pandas>=2.3.3",
    "protobuf>=6.33.2",
    "psycopg[binary]>=3.2.10",
    "pyarrow>=22.0.0",
    "pylzma>=0.6.0",
    "pytest>=8.4.2",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "selenium>=4.39.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.5.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "urlextract>=1.9.0",
    "zstandard>=0.25.0",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.entry-points."smdt.readers"]
json = "smdt.io.readers.json:JsonReader"
jsonl = "smdt.io.readers.jsonl:JsonlReader"
csv_pd = "smdt.io.readers.csv_pd:PandasCsvReader"
zip = "smdt.io.readers.zip:ZipReader"
tar = "smdt.io.readers.tar:TarReader"

[project.optional-dependencies]
cpu = []
gpu = []

# Existing optional groups
enrichers = []
langdetect = ["langdetect>=1.0.9"]
textgen = ["openai>=2.6.0"]
detoxify_toxicity = ["transformers"]


# --- UV CONFIGURATION ---

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true
 
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
 
[tool.uv.sources]
torch = [
    # 1. High Priority: GPU (If 'gpu' extra is present, use CUDA)
    { index = "pytorch-gpu", marker = "sys_platform == 'linux' and extra == 'gpu'" },
    
    # 2. CPU: Only if 'cpu' is present AND 'gpu' is NOT present
    { index = "pytorch-cpu", marker = "sys_platform == 'linux' and extra == 'cpu' and extra != 'gpu'" },

    # 3. Fallback for Linux (No extras selected) -> Use PyPI
    { index = "pypi", marker = "sys_platform == 'linux' and extra != 'cpu' and extra != 'gpu'" },

    # 4. Mac & Windows -> Always use PyPI (Standard Wheel)
    { index = "pypi", marker = "sys_platform != 'linux'" }
]